--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.47",
     "@types/react": "^16.9.38",
+    "@types/react-csv": "^1.1.1",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.3.5",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
